// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff (array reorder and change) 1`] = `
Array [
  Object {
    "index": 1,
    "kind": "D",
    "path": Array [
      "a",
    ],
  },
  Object {
    "indices": Array [
      1,
      0,
    ],
    "kind": "R",
    "path": Array [
      "a",
    ],
  },
  DiffEdit {
    "kind": "E",
    "lhs": 2,
    "path": Array [
      "a",
      0,
      "index",
    ],
    "rhs": 0,
  },
  DiffEdit {
    "kind": "E",
    "lhs": 0,
    "path": Array [
      "a",
      1,
      "index",
    ],
    "rhs": 1,
  },
]
`;

exports[`diff (array reorder, add, remove with id) 1`] = `
Array [
  Object {
    "index": 1,
    "kind": "D",
    "path": Array [
      "a",
    ],
  },
  Object {
    "indices": Array [
      1,
      0,
    ],
    "kind": "R",
    "path": Array [
      "a",
    ],
  },
  Object {
    "indices": Array [
      2,
      1,
      0,
    ],
    "kind": "R",
    "path": Array [
      "b",
      "c",
      "d",
    ],
  },
  Object {
    "index": 0,
    "item": Object {
      "kind": "N",
      "rhs": Object {
        "key": 7,
      },
    },
    "kind": "A",
    "path": Array [
      "b",
      "c",
      "d",
    ],
  },
]
`;

exports[`diff (array reorder, add, remove) 1`] = `
Array [
  Object {
    "index": 1,
    "kind": "D",
    "path": Array [
      "a",
    ],
  },
  Object {
    "indices": Array [
      1,
      0,
    ],
    "kind": "R",
    "path": Array [
      "a",
    ],
  },
  Object {
    "indices": Array [
      2,
      1,
      0,
    ],
    "kind": "R",
    "path": Array [
      "b",
      "c",
      "d",
    ],
  },
  Object {
    "index": 0,
    "item": Object {
      "kind": "N",
      "rhs": 7,
    },
    "kind": "A",
    "path": Array [
      "b",
      "c",
      "d",
    ],
  },
]
`;
